--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "primus": "^8.0.9",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "ws": "^8.15.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
